// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Resource Serialization Service UT deserialize() should deserialize a resource with complex properties 1`] = `
[
  TestResource {
    "MODEL_NAME": "test-resource",
    "MODEL_TYPE": "resource",
    "_deleteMarker": false,
    "anchors": [],
    "context": undefined,
    "dependencies": [],
    "properties": {
      "key1": {
        "key2": {
          "key3": "value3",
        },
        "key4": "value4",
      },
    },
    "resourceId": "resource-1",
    "response": {
      "response1": "value1",
    },
  },
]
`;

exports[`Resource Serialization Service UT deserialize() should deserialize a single resource 1`] = `
[
  TestResource {
    "MODEL_NAME": "test-resource",
    "MODEL_TYPE": "resource",
    "_deleteMarker": false,
    "anchors": [],
    "context": undefined,
    "dependencies": [],
    "properties": {
      "key1": "value1",
    },
    "resourceId": "resource-1",
    "response": {
      "response1": "value1",
    },
  },
]
`;

exports[`Resource Serialization Service UT deserialize() should deserialize a single shared resource 1`] = `
[
  TestResource {
    "MODEL_NAME": "test-resource",
    "MODEL_TYPE": "resource",
    "_deleteMarker": false,
    "anchors": [],
    "context": undefined,
    "dependencies": [
      {
        "from": "test-resource=resource-1",
        "relationship": {
          "onField": "resourceId",
          "toField": "resourceId",
          "type": "parent",
        },
        "to": "test-resource=resource-2",
      },
    ],
    "properties": {
      "key1": "value1",
    },
    "resourceId": "resource-1",
    "response": {
      "response1": "value1",
    },
  },
  SharedTestResource {
    "MODEL_NAME": "test-resource",
    "MODEL_TYPE": "shared-resource",
    "_deleteMarker": false,
    "anchors": [],
    "context": "test-resource=resource-2",
    "dependencies": [
      {
        "from": "test-resource=resource-2",
        "relationship": {
          "onField": "resourceId",
          "toField": "resourceId",
          "type": "child",
        },
        "to": "test-resource=resource-1",
      },
    ],
    "properties": {},
    "resourceId": "resource-2",
    "response": {},
  },
]
`;

exports[`Resource Serialization Service UT serialize() should not serialize deleted resources 1`] = `
{
  "dependencies": [],
  "resources": {
    "resource-1": {
      "className": "TestResource",
      "resource": {
        "properties": {
          "key1": "value1",
        },
        "resourceId": "resource-1",
        "response": {
          "response1": "value1",
        },
      },
    },
  },
  "sharedResources": {},
}
`;

exports[`Resource Serialization Service UT serialize() should serialize an empty array 1`] = `
{
  "dependencies": [],
  "resources": {},
  "sharedResources": {},
}
`;

exports[`Resource Serialization Service UT serialize() should serialize dependencies and properties and resources 1`] = `
{
  "dependencies": [
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "resourceId",
          "toField": "resourceId",
        },
      ],
      "from": "test-resource=resource-1",
      "relationship": {
        "onField": "resourceId",
        "toField": "resourceId",
        "type": "parent",
      },
      "to": "test-resource=resource-2",
    },
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "resourceId",
          "toField": "resourceId",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "resourceId",
          "toField": "resourceId",
        },
      ],
      "from": "test-resource=resource-2",
      "relationship": {
        "onField": "resourceId",
        "toField": "resourceId",
        "type": "child",
      },
      "to": "test-resource=resource-1",
    },
  ],
  "resources": {
    "resource-1": {
      "className": "TestResource",
      "resource": {
        "properties": {
          "key1": "value1",
        },
        "resourceId": "resource-1",
        "response": {
          "response1": "value1",
        },
      },
    },
    "resource-2": {
      "className": "TestResource",
      "resource": {
        "properties": {
          "key2": "value2",
        },
        "resourceId": "resource-2",
        "response": {
          "response2": "value2",
        },
      },
    },
  },
  "sharedResources": {},
}
`;

exports[`Resource Serialization Service UT serialize() should serialize non-empty array 1`] = `
{
  "dependencies": [],
  "resources": {
    "resource-1": {
      "className": "TestResource",
      "resource": {
        "properties": {},
        "resourceId": "resource-1",
        "response": {},
      },
    },
  },
  "sharedResources": {},
}
`;

exports[`Resource Serialization Service UT serialize() should serialize shared resources 1`] = `
{
  "dependencies": [
    {
      "behaviors": [
        {
          "forAction": "delete",
          "onAction": "delete",
          "onField": "resourceId",
          "toField": "resourceId",
        },
      ],
      "from": "test-resource=resource-1",
      "relationship": {
        "onField": "resourceId",
        "toField": "resourceId",
        "type": "parent",
      },
      "to": "test-resource=resource-2",
    },
    {
      "behaviors": [
        {
          "forAction": "add",
          "onAction": "add",
          "onField": "resourceId",
          "toField": "resourceId",
        },
        {
          "forAction": "update",
          "onAction": "add",
          "onField": "resourceId",
          "toField": "resourceId",
        },
      ],
      "from": "test-resource=resource-2",
      "relationship": {
        "onField": "resourceId",
        "toField": "resourceId",
        "type": "child",
      },
      "to": "test-resource=resource-1",
    },
  ],
  "resources": {
    "resource-1": {
      "className": "TestResource",
      "resource": {
        "properties": {},
        "resourceId": "resource-1",
        "response": {},
      },
    },
  },
  "sharedResources": {
    "resource-2": {
      "className": "SharedTestResource",
      "resource": {
        "properties": {
          "key2": "value2",
        },
        "resourceId": "resource-2",
        "response": {
          "response2": "value2",
        },
      },
    },
  },
}
`;
